modify width of social icon container to stop wrapping and centre align

--- a/css/tonytamplin.less
+++ b/css/tonytamplin.less
@@ -35,7 +35,7 @@ body {
         margin-top: 10px;
         margin-left: auto;
         margin-right: auto;
-        width: 176px;
+        width: 212px;
         img {
             width: 32px;
             height: 32px;
